--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     A dedicated assistant for Bug Bounty Hunters and Pentesters.
                 </p>
                 <div class="cta-row">
-                    <a href="javascript:void(0)" onclick="openVideoModal()" class="btn-hero">
+                    <a href="javascript:void(0)" onclick="scrollToDemo()" class="btn-hero">
                         <i class="fas fa-play"></i> WATCH DEPLOYMENT
                     </a>
                     <a href="https://github.com/hack-with-rohit" target="_blank" class="btn-ghost">
